--- a/app/src/main/res/layout/layout_countdown_progress.xml
+++ b/app/src/main/res/layout/layout_countdown_progress.xml
@@ -2,17 +2,15 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_countdown"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ProgressBar
         android:id="@+id/progress_countdown"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:indeterminate="false"
-        android:progressDrawable="@drawable/progress"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:indeterminate="false"/>
 
     <TextView
         android:id="@+id/tv_progress_inside_message"
@@ -26,7 +24,5 @@
         android:text=""
         android:textColor="@color/black"
         android:textSize="20sp" />
-
-
 
 </RelativeLayout>
