--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,24 @@
         android:id="@+id/layout_custom_countdown"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_gravity="center"
-        app:progressColorTint="@color/foreground_progress_color"
+        app:progressColorTint="#77da8a"
         app:progressColorTintBg="@color/background_progress_color"
         app:progressRadius="0"
-        app:progressText=""
-        app:progressTextSize="20"
-        app:progressTextColor="@color/black"/>
+        app:progressText="test message"
+        app:progressTextSize="16"
+        app:progressTextColor="#000000">
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="dfssfdfds"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:gravity="center"/>-->
+
+    </kr.co.zetta.countdownprogress.CountDownProgress>
 
     <LinearLayout
         android:layout_width="wrap_content"
