add method onSkip() and onRelease(), add method for set progressbar color and radius

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,6 @@
         android:id="@+id/layout_custom_countdown"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        app:progressColorTint="#77da8a"
-        app:progressColorTintBg="@color/background_progress_color"
-        app:progressRadius="8"
         app:progressText="test message"
         app:progressTextSize="16"
         app:progressTextColor="#000000"/>
@@ -61,6 +58,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="restart"/>
+
+        <Button
+            android:id="@+id/btn_skip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="skip"/>
+
     </LinearLayout>
 
 
