module version up (0.0.2-alpha)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,9 @@
         android:id="@+id/layout_custom_countdown"
         android:layout_width="300dp"
         android:layout_height="50dp"
+        app:progressColorTint="#77da8a"
+        app:progressColorTintBg="@color/background_progress_color"
+        app:progressRadius="8"
         app:progressText="test message"
         app:progressTextSize="16"
         app:progressTextColor="#000000"/>
